Fixed: div.tip backround is too dark (ckeditor-sdk#83).

--- a/source/resources/css/ck.css
+++ b/source/resources/css/ck.css
@@ -161,7 +161,7 @@ pre code a
 	border: 1px solid #aaa;
 	padding: 1.2em 1.2em 1.2em 65px !important;
 	margin: 1em 0;
-	background: #eee;
+	background: #f7f7f7;
 	overflow: hidden;
 	position: relative;
 	/* If other than p element is used for the box,
